# bank-marketing

./: .gitignore  EP2.docx  EP2_XGBOOST.py  README.md  main.ipynb  pyproject.toml
