[project]
name = "bank-marketing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "hyperopt>=0.2.7",
    "imbalanced-learn>=0.13.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "matplotlib-inline>=0.1.7",
    "mlflow>=2.22.0",
    "pandas>=2.2.3",
    "pyspark==3.5.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "xgboost>=3.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
]
